# Criacao-de-pacotes-de-processamento-de-imagens-com-python

./: README.md  requirement.txt  setup.cfg  setup.py
calculator/: __init__.py  gui.py  operacoes.py
calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_operacoes.py
